added feature/update to parent maven pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
 		<module>eu.evesuite.eve.feature</module>
 		<module>eu.evesuite.eve.ui</module>
 		<module>eu.evesuite.eve.ui.feature</module>
+		<module>eu.evesuite.update</module>
 	</modules>
 
 	<scm>
